[package]
name = "pomodoro-timer"
version = "0.1.0"
edition = "2021"
description = "A simple CLI Pomodoro timer with notifications"
authors = ["Prakhar Pratyush <prakhar.pratyush8010@gmail.com>"]
license = "MIT"
repository = "https://github.com/prakhar0711/pomodoro-timer-cli"

[dependencies]
colored ="3.0.0"
notify-rust="4"

[[bin]]
name = "pomodoro"
path = "src/main.rs"
